# Create-opencv-docker-image

CreateContainerImage/: Dockerfile  Dockerfile.cuda
TestContainerImage/: .gitignore
TestContainerImage/.devcontainer/: docker-compose.yml
TestContainerImage/src_cc/: CMakeLists.txt  main.cpp
TestContainerImage/src_py/: test.py
